Combined maps into "properties" maps