@@ -4,7 +4,6 @@ import com.google.common.base.Splitter;
 import io.github.jbellis.brokk.IProject;
 import io.github.jbellis.brokk.util.ExecutorServiceUtil;
 import io.github.jbellis.brokk.util.TextCanonicalizer;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
@@ -14,7 +13,6 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.util.ArrayDeque; // Added import
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -42,7 +40,6 @@ import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -69,18 +66,8 @@ public abstract class TreeSitterAnalyzer
     protected static final int PRIORITY_HIGH = -1;
     protected static final int PRIORITY_LOW = 1;
 
-    private static boolean containsAnyHierarchySeparator(String s) {
-        for (String sep : COMMON_HIERARCHY_SEPARATORS) {
-            if (s.contains(sep)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
     // Comparator for sorting CodeUnit definitions by priority
-    private final Comparator<CodeUnit> DEFINITION_COMPARATOR = Comparator
-            .comparingInt(this::definitionOverridePriority)
+    private final Comparator<CodeUnit> DEFINITION_COMPARATOR = Comparator.comparingInt(this::definitionOverridePriority)
             .thenComparingInt(this::firstStartByteForSelection)
             .thenComparing(cu -> cu.source().toString(), String.CASE_INSENSITIVE_ORDER)
             .thenComparing(CodeUnit::fqName, String.CASE_INSENSITIVE_ORDER)
@@ -98,91 +85,34 @@ public abstract class TreeSitterAnalyzer
         return parser;
     });
     private final ThreadLocal<TSQuery> query;
+
+    // "Database"
     private final ConcurrentSkipListMap<String, List<CodeUnit>> symbolIndex =
             new ConcurrentSkipListMap<>(String.CASE_INSENSITIVE_ORDER);
+    private final Map<ProjectFile, TSTree> parsedTreeCache =
+            new ConcurrentHashMap<>(); // Cache parsed trees to avoid redundant parsing
+    // New combined state maps (mirrors of legacy maps during migration)
+    private final Map<CodeUnit, CodeUnitProperties> codeUnitState = new ConcurrentHashMap<>();
+    private final Map<ProjectFile, FileProperties> fileState = new ConcurrentHashMap<>();
+
+    // Ensures reads see a consistent view while updates mutate internal maps atomically
+    private final ReentrantReadWriteLock stateRwLock = new ReentrantReadWriteLock();
+
     // Timestamp of the last successful full-project update (epoch nanos)
     private final AtomicLong lastUpdateEpochNanos = new AtomicLong(0L);
     // Over-approximation buffer for filesystem mtime comparisons (nanos)
     private static final long MTIME_EPSILON_NANOS = TimeUnit.MILLISECONDS.toNanos(300);
-    private final Map<ProjectFile, TSTree> parsedTreeCache =
-            new ConcurrentHashMap<>(); // Cache parsed trees to avoid redundant parsing
-    // New combined state maps (mirrors of legacy maps during migration)
-    private final Map<CodeUnit, CodeUnitState> codeUnitState = new ConcurrentHashMap<>();
-    private final Map<ProjectFile, FileState> fileState = new ConcurrentHashMap<>();
-    // Ensures reads see a consistent view while updates mutate internal maps atomically
-    private final ReentrantReadWriteLock stateRwLock = new ReentrantReadWriteLock();
 
     private final IProject project;
     private final Language language;
     protected final Set<Path> normalizedExcludedPaths;
 
     /**
-     * Frees memory from the parsed AST cache.
-     */
-    public void clearCaches() {
-        withReadLock(parsedTreeCache::clear);
-    }
-
-    /**
-     * The number of cached AST entries.
-     */
-    public int cacheSize() {
-        return withReadLock(parsedTreeCache::size);
-    }
-
-    /* ------------ read-lock helpers ------------ */
-
-    /**
-     * Execute {@code supplier} under the read lock and return its result.
-     */
-    private <T> T withReadLock(Supplier<T> supplier) {
-        var rl = stateRwLock.readLock();
-        rl.lock();
-        try {
-            return supplier.get();
-        } finally {
-            rl.unlock();
-        }
-    }
-
-    /**
-     * Execute {@code runnable} under the read lock.
-     */
-    private void withReadLock(Runnable runnable) {
-        var rl = stateRwLock.readLock();
-        rl.lock();
-        try {
-            runnable.run();
-        } finally {
-            rl.unlock();
-        }
-    }
-
-    /**
-     * A thread-safe way to interact with the "codeUnitState" field.
-     *
-     * @param function the callback.
-     */
-    protected <R> R withCodeUnitState(Function<Map<CodeUnit, CodeUnitState>, R> function) {
-        return withReadLock(() -> function.apply(codeUnitState));
-    }
-
-    /**
-     * A thread-safe way to interact with the "fileState" field.
-     *
-     * @param function the callback.
-     */
-    public <R> R withFileState(Function<Map<ProjectFile, FileState>, R> function) {
-        return withReadLock(() -> function.apply(fileState));
-    }
-
-    /**
      * Stores information about a definition found by a query match, including associated modifier keywords and
      * decorators.
      */
     protected record DefinitionInfoRecord(
-            String primaryCaptureName, String simpleName, List<String> modifierKeywords, List<TSNode> decoratorNodes) {
-    }
+            String primaryCaptureName, String simpleName, List<String> modifierKeywords, List<TSNode> decoratorNodes) {}
 
     protected record LanguageSyntaxProfile(
             Set<String> classLikeNodeTypes,
@@ -196,25 +126,9 @@ public abstract class TreeSitterAnalyzer
             String typeParametersFieldName, // For generics on type aliases, classes, functions etc.
             Map<String, SkeletonType> captureConfiguration,
             String asyncKeywordNodeType,
-            Set<String> modifierNodeTypes) {
-    }
+            Set<String> modifierNodeTypes) {}
 
-    public record Range(int startByte, int endByte, int startLine, int endLine, int commentStartByte) {
-    }
-
-    // Combined state per CodeUnit (mirror of legacy children/signatures/sourceRanges)
-    protected record CodeUnitState(List<CodeUnit> children, List<String> signatures, List<Range> ranges) {
-
-        public static CodeUnitState empty() {
-            return new CodeUnitState(Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-        }
-
-    }
-
-    // Combined state per file (mirror of legacy topLevelDeclarations/parsedTreeCache/imports)
-    protected record FileState(
-            List<CodeUnit> topLevelCUs, @Nullable TSTree parsedTree, List<String> importStatements) {
-    }
+    public record Range(int startByte, int endByte, int startLine, int endLine, int commentStartByte) {}
 
     private record ProjectFilePair(ProjectFile lhs, ProjectFile rhs) {
         @Override
@@ -237,11 +151,10 @@ public abstract class TreeSitterAnalyzer
 
     private record FileAnalysisResult(
             List<CodeUnit> topLevelCUs,
-            Map<CodeUnit, CodeUnitState> codeUnitState,
+            Map<CodeUnit, CodeUnitProperties> codeUnitState,
             Map<String, List<CodeUnit>> codeUnitsBySymbol,
             List<String> importStatements // Added for module-level imports
-    ) {
-    }
+            ) {}
 
     // Timing metrics for constructor-run analysis are tracked via a local Timing record instance.
     private record ConstructionTiming(
@@ -336,10 +249,10 @@ public abstract class TreeSitterAnalyzer
         List<CompletableFuture<?>> futures = new ArrayList<>();
         // Executors: virtual threads for I/O/parsing, single-thread for ingestion
         try (var ioExecutor = ExecutorServiceUtil.newVirtualThreadExecutor("ts-io-", 1000);
-             var parseExecutor = ExecutorServiceUtil.newFixedThreadExecutor(
-                     Runtime.getRuntime().availableProcessors(), "ts-parse-");
-             var ingestExecutor = ExecutorServiceUtil.newFixedThreadExecutor(
-                     Runtime.getRuntime().availableProcessors(), "ts-ingest-")) {
+                var parseExecutor = ExecutorServiceUtil.newFixedThreadExecutor(
+                        Runtime.getRuntime().availableProcessors(), "ts-parse-");
+                var ingestExecutor = ExecutorServiceUtil.newFixedThreadExecutor(
+                        Runtime.getRuntime().availableProcessors(), "ts-ingest-")) {
             for (var pf : filesToProcess) {
                 CompletableFuture<Void> future = CompletableFuture.supplyAsync(
                                 () -> readFileBytes(pf, timing), ioExecutor)
@@ -444,11 +357,61 @@ public abstract class TreeSitterAnalyzer
         this(project, language, Collections.emptySet());
     }
 
-    /* ---------- Helper methods for accessing CodeUnits ---------- */
+    /** Frees memory from the parsed AST cache. */
+    public void clearCaches() {
+        withReadLock(parsedTreeCache::clear);
+    }
+
+    /** The number of cached AST entries. */
+    public int cacheSize() {
+        return withReadLock(parsedTreeCache::size);
+    }
+
+    /* ------------ read-lock helpers ------------ */
+
+    /** Execute {@code supplier} under the read lock and return its result. */
+    private <T> T withReadLock(Supplier<T> supplier) {
+        var rl = stateRwLock.readLock();
+        rl.lock();
+        try {
+            return supplier.get();
+        } finally {
+            rl.unlock();
+        }
+    }
+
+    /** Execute {@code runnable} under the read lock. */
+    private void withReadLock(Runnable runnable) {
+        var rl = stateRwLock.readLock();
+        rl.lock();
+        try {
+            runnable.run();
+        } finally {
+            rl.unlock();
+        }
+    }
 
     /**
-     * All CodeUnits we know about (top-level + children).
+     * A thread-safe way to interact with the "codeUnitState" field.
+     *
+     * @param function the callback.
      */
+    protected <R> R withCodeUnitProperties(Function<Map<CodeUnit, CodeUnitProperties>, R> function) {
+        return withReadLock(() -> function.apply(codeUnitState));
+    }
+
+    /**
+     * A thread-safe way to interact with the "fileState" field.
+     *
+     * @param function the callback.
+     */
+    public <R> R withFileProperties(Function<Map<ProjectFile, FileProperties>, R> function) {
+        return withReadLock(() -> function.apply(fileState));
+    }
+
+    /* ---------- Helper methods for accessing CodeUnits ---------- */
+
+    /** All CodeUnits we know about (top-level + children). */
     private Stream<CodeUnit> allCodeUnits() {
         // Stream parents from childrenByParent (they might not be in topLevelDeclarations if they are nested)
         Stream<CodeUnit> parentStream = codeUnitState.keySet().stream();
@@ -458,11 +421,43 @@ public abstract class TreeSitterAnalyzer
         return Stream.of(parentStream, childrenStream).flatMap(s -> s).distinct();
     }
 
-    /**
-     * De-duplicate and materialise into a List once.
-     */
+    /** De-duplicate and materialise into a List once. */
     private List<CodeUnit> uniqueCodeUnitList() {
         return withReadLock(() -> allCodeUnits().distinct().toList());
+    }
+
+    /* ---------- Helper methods for accessing various properties ---------- */
+
+    private CodeUnitProperties codeUnitProperties(CodeUnit codeUnit) {
+        return withCodeUnitProperties(props -> props.getOrDefault(codeUnit, CodeUnitProperties.empty()));
+    }
+
+    protected List<CodeUnit> childrenOf(CodeUnit codeUnit) {
+        return codeUnitProperties(codeUnit).children();
+    }
+
+    protected List<String> signaturesOf(CodeUnit codeUnit) {
+        return codeUnitProperties(codeUnit).signatures();
+    }
+
+    protected List<Range> rangesOf(CodeUnit codeUnit) {
+        return codeUnitProperties(codeUnit).ranges();
+    }
+
+    private FileProperties fileProperties(ProjectFile file) {
+        return withFileProperties(props -> props.getOrDefault(file, FileProperties.empty()));
+    }
+
+    protected List<CodeUnit> topLevelCodeUnitsOf(ProjectFile file) {
+        return fileProperties(file).topLevelCodeUnits();
+    }
+
+    protected List<String> importStatementsOf(ProjectFile file) {
+        return fileProperties(file).importStatements();
+    }
+
+    protected @Nullable TSTree treeOf(ProjectFile file) {
+        return fileProperties(file).parsedTree();
     }
 
     /* ---------- IAnalyzer ---------- */
@@ -478,19 +473,14 @@ public abstract class TreeSitterAnalyzer
 
     @Override
     public List<CodeUnit> getMembersInClass(String fqClass) {
-        Optional<CodeUnit> parent = getDefinition(fqClass).stream()
-                .filter(CodeUnit::isClass)
-                .findFirst();
-        return parent.map(p -> List.copyOf(codeUnitState.getOrDefault(p, CodeUnitState.empty()).children()))
-                .orElse(List.of());
+        Optional<CodeUnit> parent =
+                getDefinition(fqClass).stream().filter(CodeUnit::isClass).findFirst();
+        return parent.map(this::childrenOf).orElse(List.of());
     }
 
     @Override
     public Optional<ProjectFile> getFileFor(String fqName) {
-        return getDefinition(fqName)
-                .stream()
-                .map(CodeUnit::source)
-                .findFirst();
+        return getDefinition(fqName).stream().map(CodeUnit::source).findFirst();
     }
 
     @Override
@@ -624,7 +614,8 @@ public abstract class TreeSitterAnalyzer
      */
     public Map<ProjectFile, List<CodeUnit>> getTopLevelDeclarations() {
         final Map<ProjectFile, List<CodeUnit>> result = new HashMap<>();
-        fileState.forEach((file, fileState) -> result.put(file, fileState.topLevelCUs));
+        withReadLock(() ->
+                fileState.forEach((file, fileProperties) -> result.put(file, fileProperties.topLevelCodeUnits())));
         return Map.copyOf(result);
     }
 
@@ -635,10 +626,7 @@ public abstract class TreeSitterAnalyzer
             return Map.of();
         }
 
-        List<CodeUnit> topCUs = withFileState(map -> {
-            var fs = map.get(file);
-            return fs == null ? null : fs.topLevelCUs();
-        });
+        List<CodeUnit> topCUs = topLevelCodeUnitsOf(file);
         if (topCUs.isEmpty()) return Map.of();
 
         Map<CodeUnit, String> resultSkeletons = new HashMap<>();
@@ -662,7 +650,7 @@ public abstract class TreeSitterAnalyzer
             return Set.of();
         }
 
-        List<CodeUnit> topCUs = topLevelDeclarations.getOrDefault(file, List.of());
+        List<CodeUnit> topCUs = topLevelCodeUnitsOf(file);
         if (topCUs.isEmpty()) return Set.of();
 
         Set<CodeUnit> allDeclarationsInFile = new HashSet<>();
@@ -673,7 +661,7 @@ public abstract class TreeSitterAnalyzer
             CodeUnit current = toProcess.poll();
             allDeclarationsInFile.add(current); // Add all encountered CodeUnits
 
-            childrenByParent.getOrDefault(current, List.of()).forEach(child -> {
+            childrenOf(current).forEach(child -> {
                 if (visited.add(child)) { // Add to queue only if not visited
                     toProcess.add(child);
                 }
@@ -690,15 +678,9 @@ public abstract class TreeSitterAnalyzer
     }
 
     private void reconstructSkeletonRecursive(CodeUnit cu, String indent, boolean headerOnly, StringBuilder sb) {
-        // Prefer new codeUnitState, fall back to legacy maps if absent
-        var sigList = withCodeUnitState(map -> {
-            var st = map.get(cu);
-            return st == null ? null : st.signatures();
-        });
-        if (sigList == null) {
-            sigList = signatures.get(cu);
-        }
-        if (sigList == null || sigList.isEmpty()) {
+        final List<String> sigList = signaturesOf(cu);
+
+        if (sigList.isEmpty()) {
             // It's possible for some CUs (e.g., a namespace CU acting only as a parent) to not have direct textual
             // signatures.
             // This can be legitimate if they are primarily structural and their children form the content.
@@ -720,13 +702,7 @@ public abstract class TreeSitterAnalyzer
             }
         }
 
-        List<CodeUnit> allChildren = withCodeUnitState(map -> {
-            var st = map.get(cu);
-            return st == null ? null : st.children();
-        });
-        if (allChildren == null) {
-            allChildren = childrenByParent.getOrDefault(cu, List.of());
-        }
+        final List<CodeUnit> allChildren = childrenOf(cu);
 
         final var kids = allChildren.stream()
                 .filter(child -> !headerOnly || child.isField())
@@ -759,14 +735,7 @@ public abstract class TreeSitterAnalyzer
 
     public Optional<String> getSkeletonImpl(String fqName, Boolean headerOnly) {
         return withReadLock(() -> {
-            var cuOpt = withCodeUnitState(map -> map.keySet().stream()
-                    .filter(c -> c.fqName().equals(fqName))
-                    .findFirst());
-            if (cuOpt.isEmpty()) {
-                cuOpt = signatures.keySet().stream()
-                        .filter(c -> c.fqName().equals(fqName))
-                        .findFirst();
-            }
+            final var cuOpt = getDefinition(fqName);
             if (cuOpt.isPresent()) {
                 var skeleton = reconstructFullSkeleton(cuOpt.get(), headerOnly);
                 log.trace("getSkeleton: fqName='{}', found=true", fqName);
@@ -775,6 +744,15 @@ public abstract class TreeSitterAnalyzer
             log.trace("getSkeleton: fqName='{}', found=false", fqName);
             return Optional.empty();
         });
+    }
+
+    private static boolean containsAnyHierarchySeparator(String s) {
+        for (String sep : COMMON_HIERARCHY_SEPARATORS) {
+            if (s.contains(sep)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /**
@@ -798,14 +776,9 @@ public abstract class TreeSitterAnalyzer
         return PRIORITY_DEFAULT;
     }
 
-    /**
-     * Returns the earliest startByte among recorded ranges for deterministic ordering.
-     */
+    /** Returns the earliest startByte among recorded ranges for deterministic ordering. */
     private int firstStartByteForSelection(CodeUnit cu) {
-        return withReadLock(() -> sourceRanges.getOrDefault(cu, List.of()).stream()
-                .mapToInt(Range::startByte)
-                .min()
-                .orElse(Integer.MAX_VALUE));
+        return rangesOf(cu).stream().mapToInt(Range::startByte).min().orElse(Integer.MAX_VALUE);
     }
 
     @Override
@@ -814,9 +787,9 @@ public abstract class TreeSitterAnalyzer
                 .filter(CodeUnit::isClass)
                 .orElseThrow(() -> new SymbolNotFoundException("Class not found: " + fqName));
 
-        var ranges = sourceRanges.get(cu);
+        var ranges = rangesOf(cu);
 
-        if (ranges == null || ranges.isEmpty()) {
+        if (ranges.isEmpty()) {
             throw new SymbolNotFoundException("Source range not found for class: " + fqName);
         }
 
@@ -842,8 +815,8 @@ public abstract class TreeSitterAnalyzer
                 // overloads)
                 .filter(CodeUnit::isFunction)
                 .flatMap(cu -> {
-                    List<Range> rangesForOverloads = sourceRanges.get(cu);
-                    if (rangesForOverloads == null || rangesForOverloads.isEmpty()) {
+                    List<Range> rangesForOverloads = rangesOf(cu);
+                    if (rangesForOverloads.isEmpty()) {
                         log.warn(
                                 "No source ranges found for CU {} (fqName {}) although definition was found.",
                                 cu,
@@ -905,27 +878,6 @@ public abstract class TreeSitterAnalyzer
     }
 
     /**
-     * Calculates the line number (1-based) from a byte offset in the source text. This is used for on-demand line
-     * calculation when needed.
-     *
-     * @param source     the source text
-     * @param byteOffset the byte offset to calculate line for
-     * @return the line number (1-based)
-     */
-    protected int calculateLineFromByteOffset(String source, int byteOffset) {
-        if (byteOffset <= 0) {
-            return 1;
-        }
-
-        int clampedOffset = Math.min(byteOffset, source.length());
-        return (int) source.substring(0, clampedOffset)
-                .chars()
-                .filter(c -> c == '\n')
-                .count()
-                + 1;
-    }
-
-    /**
      * Gets the starting line number (0-based) for the given CodeUnit for UI positioning purposes. Returns the original
      * code definition line (not expanded with comments) for better navigation.
      *
@@ -934,8 +886,8 @@ public abstract class TreeSitterAnalyzer
      */
     public int getStartLineForCodeUnit(CodeUnit codeUnit) {
         return withReadLock(() -> {
-            var ranges = sourceRanges.get(codeUnit);
-            if (ranges == null || ranges.isEmpty()) {
+            var ranges = rangesOf(codeUnit);
+            if (ranges.isEmpty()) {
                 return -1;
             }
 
@@ -948,9 +900,7 @@ public abstract class TreeSitterAnalyzer
 
     /* ---------- abstract hooks ---------- */
 
-    /**
-     * Creates a new TSLanguage instance for the specific language. Called by ThreadLocal initializer.
-     */
+    /** Creates a new TSLanguage instance for the specific language. Called by ThreadLocal initializer. */
     protected abstract TSLanguage createTSLanguage();
 
     /**
@@ -977,19 +927,13 @@ public abstract class TreeSitterAnalyzer
         return parsedTreeCache.get(file);
     }
 
-    /**
-     * Provides the language-specific syntax profile.
-     */
+    /** Provides the language-specific syntax profile. */
     protected abstract LanguageSyntaxProfile getLanguageSyntaxProfile();
 
-    /**
-     * Class-path resource for the query (e.g. {@code "treesitter/python.scm"}).
-     */
+    /** Class-path resource for the query (e.g. {@code "treesitter/python.scm"}). */
     protected abstract String getQueryResource();
 
-    /**
-     * Defines the general type of skeleton that should be built for a given capture.
-     */
+    /** Defines the general type of skeleton that should be built for a given capture. */
     public enum SkeletonType {
         CLASS_LIKE,
         FUNCTION_LIKE,
@@ -1022,10 +966,10 @@ public abstract class TreeSitterAnalyzer
     /**
      * Determines the package or namespace name for a given definition.
      *
-     * @param file           The project file being analyzed.
+     * @param file The project file being analyzed.
      * @param definitionNode The TSNode representing the definition (e.g., class, function).
-     * @param rootNode       The root TSNode of the file's syntax tree.
-     * @param src            The source code of the file.
+     * @param rootNode The root TSNode of the file's syntax tree.
+     * @param src The source code of the file.
      * @return The package or namespace name, or an empty string if not applicable.
      */
     protected abstract String determinePackageName(
@@ -1053,37 +997,27 @@ public abstract class TreeSitterAnalyzer
         return packageName.isEmpty() ? classChain : packageName + "." + classChain;
     }
 
-    /**
-     * Captures that should be ignored entirely.
-     */
+    /** Captures that should be ignored entirely. */
     protected Set<String> getIgnoredCaptures() {
         return Set.of();
     }
 
-    /**
-     * Language-specific indentation string, e.g., " " or " ".
-     */
+    /** Language-specific indentation string, e.g., " " or " ". */
     protected String getLanguageSpecificIndent() {
         return "  ";
     } // Default
 
-    /**
-     * Language-specific closing token for a class or namespace (e.g., "}"). Empty if none.
-     */
+    /** Language-specific closing token for a class or namespace (e.g., "}"). Empty if none. */
     protected abstract String getLanguageSpecificCloser(CodeUnit cu);
 
-    /**
-     * Get the project this analyzer is associated with.
-     */
+    /** Get the project this analyzer is associated with. */
     protected IProject getProject() {
         return project;
     }
 
     /* ---------- core parsing ---------- */
 
-    /**
-     * Analyzes a single file and extracts declaration information from provided bytes.
-     */
+    /** Analyzes a single file and extracts declaration information from provided bytes. */
     private FileAnalysisResult analyzeFileContent(
             ProjectFile file,
             byte[] fileBytes,
@@ -1552,7 +1486,7 @@ public abstract class TreeSitterAnalyzer
         localSourceRanges.forEach((c, ranges) -> finalLocalSourceRanges.put(c, Collections.unmodifiableList(ranges)));
 
         // Combine local maps into CodeUnitState entries
-        Map<CodeUnit, CodeUnitState> localStates = new HashMap<>();
+        Map<CodeUnit, CodeUnitProperties> localStates = new HashMap<>();
         var unionKeys = new HashSet<CodeUnit>();
         unionKeys.addAll(finalLocalChildren.keySet());
         unionKeys.addAll(localSignatures.keySet());
@@ -1561,7 +1495,7 @@ public abstract class TreeSitterAnalyzer
             var kids = finalLocalChildren.getOrDefault(cu, List.of());
             var sigs = localSignatures.getOrDefault(cu, List.of());
             var rngs = finalLocalSourceRanges.getOrDefault(cu, List.of());
-            localStates.put(cu, new CodeUnitState(List.copyOf(kids), List.copyOf(sigs), List.copyOf(rngs)));
+            localStates.put(cu, new CodeUnitProperties(List.copyOf(kids), List.copyOf(sigs), List.copyOf(rngs)));
         }
 
         long __processEnd = System.nanoTime();
@@ -1611,17 +1545,18 @@ public abstract class TreeSitterAnalyzer
                 String innerType = declarationInExport.getType();
                 switch (skeletonType) {
                     case CLASS_LIKE -> typeMatch = profile.classLikeNodeTypes().contains(innerType);
-                    case FUNCTION_LIKE -> typeMatch = profile.functionLikeNodeTypes().contains(innerType)
-                            ||
-                            // Special case for TypeScript/JavaScript arrow functions in lexical declarations
-                            ((language == Languages.TYPESCRIPT || language == Languages.JAVASCRIPT)
-                                    && ("lexical_declaration".equals(innerType)
-                                    || "variable_declaration".equals(innerType)));
+                    case FUNCTION_LIKE ->
+                        typeMatch = profile.functionLikeNodeTypes().contains(innerType)
+                                ||
+                                // Special case for TypeScript/JavaScript arrow functions in lexical declarations
+                                ((language == Languages.TYPESCRIPT || language == Languages.JAVASCRIPT)
+                                        && ("lexical_declaration".equals(innerType)
+                                                || "variable_declaration".equals(innerType)));
                     case FIELD_LIKE -> typeMatch = profile.fieldLikeNodeTypes().contains(innerType);
-                    case ALIAS_LIKE -> typeMatch = (project.getAnalyzerLanguages().contains(Languages.TYPESCRIPT)
-                            && "type_alias_declaration".equals(innerType));
-                    default -> {
-                    }
+                    case ALIAS_LIKE ->
+                        typeMatch = (project.getAnalyzerLanguages().contains(Languages.TYPESCRIPT)
+                                && "type_alias_declaration".equals(innerType));
+                    default -> {}
                 }
                 if (typeMatch) {
                     nodeForContent = declarationInExport; // Unwrap for processing
@@ -1641,7 +1576,7 @@ public abstract class TreeSitterAnalyzer
         // Check if we need to find specific variable_declarator (this should run after export unwrapping)
         if ((language == Languages.TYPESCRIPT || language == Languages.JAVASCRIPT)
                 && ("lexical_declaration".equals(nodeForContent.getType())
-                || "variable_declaration".equals(nodeForContent.getType()))
+                        || "variable_declaration".equals(nodeForContent.getType()))
                 && (skeletonType == SkeletonType.FIELD_LIKE || skeletonType == SkeletonType.FUNCTION_LIKE)) {
             // For lexical_declaration (const/let) or variable_declaration (var), find the specific variable_declarator
             // by name
@@ -1721,7 +1656,7 @@ public abstract class TreeSitterAnalyzer
                     // For export statements, use the original node to include the export keyword
                     if (nodeForSignature != nodeForContent) {
                         classSignatureText = textSlice(
-                                nodeForSignature.getStartByte(), bodyNode.getStartByte(), srcBytes)
+                                        nodeForSignature.getStartByte(), bodyNode.getStartByte(), srcBytes)
                                 .stripTrailing();
                     } else {
                         classSignatureText = textSlice(nodeForContent.getStartByte(), bodyNode.getStartByte(), srcBytes)
@@ -1731,11 +1666,11 @@ public abstract class TreeSitterAnalyzer
                     // For export statements, use the original node to include the export keyword
                     if (nodeForSignature != nodeForContent) {
                         classSignatureText = textSlice(
-                                nodeForSignature.getStartByte(), nodeForSignature.getEndByte(), srcBytes)
+                                        nodeForSignature.getStartByte(), nodeForSignature.getEndByte(), srcBytes)
                                 .stripTrailing();
                     } else {
                         classSignatureText = textSlice(
-                                nodeForContent.getStartByte(), nodeForContent.getEndByte(), srcBytes)
+                                        nodeForContent.getStartByte(), nodeForContent.getEndByte(), srcBytes)
                                 .stripTrailing();
                     }
                     // Attempt to remove trailing tokens like '{' or ';' if no body node found, to get a cleaner
@@ -1865,7 +1800,7 @@ public abstract class TreeSitterAnalyzer
                 }
 
                 String aliasSignature = (exportPrefix.stripTrailing() + " type " + simpleName + typeParamsText + " = "
-                        + valueText)
+                                + valueText)
                         .strip();
                 if (!aliasSignature.endsWith(";")) {
                     aliasSignature += ";";
@@ -1913,9 +1848,7 @@ public abstract class TreeSitterAnalyzer
         return result;
     }
 
-    /**
-     * Renders the opening part of a class-like structure (e.g., "public class Foo {").
-     */
+    /** Renders the opening part of a class-like structure (e.g., "public class Foo {"). */
     protected abstract String renderClassHeader(
             TSNode classNode, String src, String exportPrefix, String signatureText, String baseIndent);
     // renderClassFooter is removed, replaced by getLanguageSpecificCloser
@@ -1928,7 +1861,7 @@ public abstract class TreeSitterAnalyzer
      * the full AST subtree. The default implementation simply returns the raw text of {@code parametersNode}.
      *
      * @param parametersNode The TSNode representing the parameter list.
-     * @param src            The source code.
+     * @param src The source code.
      * @return The formatted parameter list text.
      */
     protected String formatParameterList(TSNode parametersNode, String src) {
@@ -1943,7 +1876,7 @@ public abstract class TreeSitterAnalyzer
      * node is null).
      *
      * @param returnTypeNode The TSNode representing the return type.
-     * @param src            The source code.
+     * @param src The source code.
      * @return The formatted return type text.
      */
     protected String formatReturnType(@Nullable TSNode returnTypeNode, String src) {
@@ -1990,11 +1923,11 @@ public abstract class TreeSitterAnalyzer
      * language-specific formatting, including any necessary keywords, type annotations, and terminators (e.g.,
      * semicolon).
      *
-     * @param fieldNode     The TSNode representing the field declaration.
-     * @param src           The source code.
-     * @param exportPrefix  The pre-determined export/visibility prefix (e.g., "export const ").
+     * @param fieldNode The TSNode representing the field declaration.
+     * @param src The source code.
+     * @param exportPrefix The pre-determined export/visibility prefix (e.g., "export const ").
      * @param signatureText The core text of the field signature (e.g., "fieldName: type = value").
-     * @param baseIndent    The indentation string for this line.
+     * @param baseIndent The indentation string for this line.
      * @return The fully formatted field signature line.
      */
     protected String formatFieldSignature(
@@ -2024,7 +1957,7 @@ public abstract class TreeSitterAnalyzer
      * this to provide language-specific logic. The default implementation returns an empty string.
      *
      * @param node The node to check for visibility/export modifiers.
-     * @param src  The source code.
+     * @param src The source code.
      * @return The visibility or export prefix string.
      */
     protected String getVisibilityPrefix(TSNode node, String src) {
@@ -2034,12 +1967,12 @@ public abstract class TreeSitterAnalyzer
     /**
      * Builds the function signature lines.
      *
-     * @param funcNode        The TSNode for the function definition.
+     * @param funcNode The TSNode for the function definition.
      * @param providedNameOpt Optional pre-determined name (e.g. from a specific capture).
-     * @param src             Source code.
-     * @param indent          Indentation string.
-     * @param lines           List to add signature lines to.
-     * @param exportPrefix    Pre-determined export and modifier prefix (e.g., "export async").
+     * @param src Source code.
+     * @param indent Indentation string.
+     * @param lines List to add signature lines to.
+     * @param exportPrefix Pre-determined export and modifier prefix (e.g., "export async").
      */
     protected void buildFunctionSkeleton(
             TSNode funcNode,
@@ -2157,8 +2090,8 @@ public abstract class TreeSitterAnalyzer
      * Retrieves extra comment lines to be added to a function's skeleton, typically before the body. Example: mutation
      * tracking comments.
      *
-     * @param bodyNode   The TSNode representing the function's body. Can be null.
-     * @param src        The source code.
+     * @param bodyNode The TSNode representing the function's body. Can be null.
+     * @param src The source code.
      * @param functionCu The CodeUnit for the function. Can be null if not available.
      * @return A list of comment strings, or an empty list if none.
      */
@@ -2174,15 +2107,15 @@ public abstract class TreeSitterAnalyzer
      * for constructing the entire line, including indentation and any language-specific body placeholder if the
      * function body is not empty or trivial.
      *
-     * @param funcNode                The Tree-sitter node representing the function.
-     * @param src                     The source code of the file.
+     * @param funcNode The Tree-sitter node representing the function.
+     * @param src The source code of the file.
      * @param exportAndModifierPrefix The combined export and modifier prefix (e.g., "export async ", "public static ").
-     * @param asyncPrefix             This parameter is deprecated and no longer used; async is part of exportAndModifierPrefix.
-     *                                Pass empty string.
-     * @param functionName            The name of the function.
-     * @param paramsText              The text content of the function's parameters.
-     * @param returnTypeText          The text content of the function's return type, or empty if none.
-     * @param indent                  The base indentation string for this line.
+     * @param asyncPrefix This parameter is deprecated and no longer used; async is part of exportAndModifierPrefix.
+     *     Pass empty string.
+     * @param functionName The name of the function.
+     * @param paramsText The text content of the function's parameters.
+     * @param returnTypeText The text content of the function's return type, or empty if none.
+     * @param indent The base indentation string for this line.
      * @return The fully rendered function declaration line, or null/blank if it should not be added.
      */
     protected abstract String renderFunctionDeclaration(
@@ -2196,9 +2129,7 @@ public abstract class TreeSitterAnalyzer
             String returnTypeText,
             String indent);
 
-    /**
-     * Finds decorator nodes immediately preceding a given node.
-     */
+    /** Finds decorator nodes immediately preceding a given node. */
     private List<TSNode> getPrecedingDecorators(TSNode decoratedNode) {
         List<TSNode> decorators = new ArrayList<>();
         var decoratorNodeTypes = getLanguageSyntaxProfile().decoratorNodeTypes();
@@ -2214,9 +2145,7 @@ public abstract class TreeSitterAnalyzer
         return decorators;
     }
 
-    /**
-     * Extracts a substring from the source code based on node boundaries.
-     */
+    /** Extracts a substring from the source code based on node boundaries. */
     protected String textSlice(TSNode node, String src) {
         if (node.isNull()) return "";
         // Get the byte array representation of the source
@@ -2235,9 +2164,7 @@ public abstract class TreeSitterAnalyzer
         return textSliceFromBytes(node.getStartByte(), node.getEndByte(), bytes);
     }
 
-    /**
-     * Extracts a substring from the source code based on byte offsets.
-     */
+    /** Extracts a substring from the source code based on byte offsets. */
     protected String textSlice(int startByte, int endByte, String src) {
         // Get the byte array representation of the source
         byte[] bytes;
@@ -2270,16 +2197,12 @@ public abstract class TreeSitterAnalyzer
         return textSliceFromBytes(startByte, endByte, srcBytes);
     }
 
-    /**
-     * Helper method that correctly extracts UTF-8 byte slice into a String
-     */
+    /** Helper method that correctly extracts UTF-8 byte slice into a String */
     private String textSliceFromBytes(int startByte, int endByte, byte[] bytes) {
         return textSliceFromBytesWithFile(startByte, endByte, bytes, null);
     }
 
-    /**
-     * Helper method that correctly extracts UTF-8 byte slice into a String with optional file context
-     */
+    /** Helper method that correctly extracts UTF-8 byte slice into a String with optional file context */
     private String textSliceFromBytesWithFile(int startByte, int endByte, byte[] bytes, @Nullable ProjectFile file) {
         if (startByte < 0 || endByte > bytes.length || startByte > endByte) {
             if (file != null) {
@@ -2312,9 +2235,7 @@ public abstract class TreeSitterAnalyzer
         return seconds + "s " + millis + "ms";
     }
 
-    /**
-     * Compute wall-clock duration from firstStart/lastEnd AtomicLongs, returning 0 if not recorded.
-     */
+    /** Compute wall-clock duration from firstStart/lastEnd AtomicLongs, returning 0 if not recorded. */
     private static long wallDuration(AtomicLong firstStart, AtomicLong lastEnd) {
         long start = firstStart.get();
         long end = lastEnd.get();
@@ -2397,7 +2318,7 @@ public abstract class TreeSitterAnalyzer
      */
     @Override
     public List<CodeUnit> directChildren(CodeUnit cu) {
-        return withReadLock(() -> childrenByParent.getOrDefault(cu, List.of()));
+        return childrenOf(cu);
     }
 
     /* ---------- file filtering helpers ---------- */
@@ -2519,16 +2440,18 @@ public abstract class TreeSitterAnalyzer
                                         pair -> pair.lhs().equals(pair.rhs()));
 
                                 parsedTreeCache.remove(file);
-                                topLevelDeclarations.remove(file);
                                 fileState.remove(file);
 
                                 // Purge CodeUnitState entries for this file and prune children lists
                                 codeUnitState.keySet().removeIf(fromFile);
                                 codeUnitState.replaceAll((parent, state) -> {
-                                    var filteredKids = state.children().stream().filter(fromFile.negate()).toList();
+                                    var filteredKids = state.children().stream()
+                                            .filter(fromFile.negate())
+                                            .toList();
                                     if (!filteredKids.equals(state.children())) {
                                         parentsTouchedCount.incrementAndGet();
-                                        return new CodeUnitState(List.copyOf(filteredKids), state.signatures(), state.ranges());
+                                        return new CodeUnitProperties(
+                                                List.copyOf(filteredKids), state.signatures(), state.ranges());
                                     }
                                     return state;
                                 });
@@ -2550,22 +2473,6 @@ public abstract class TreeSitterAnalyzer
                                 symbolsTouchedCount.addAndGet(symbolsToPurge.size() + symbolsToUpdate.size());
                                 symbolIndex.putAll(symbolsToUpdate);
                                 symbolsToPurge.forEach(symbolIndex::remove);
-
-                                childrenByParent.keySet().removeIf(fromFile);
-                                signatures.keySet().removeIf(fromFile);
-                                sourceRanges.keySet().removeIf(fromFile);
-
-                                // remove children entries pointing to CodeUnits from the changed file
-                                childrenByParent.replaceAll((parent, kids) -> {
-                                    var filtered = kids.stream()
-                                            .filter(fromFile.negate())
-                                            .toList();
-                                    if (!filtered.equals(kids)) {
-                                        parentsTouchedCount.incrementAndGet();
-                                        return List.copyOf(filtered);
-                                    }
-                                    return kids;
-                                });
                             } catch (Throwable t) {
                                 log.error("Exception encountered while performing update for file {}", file, t);
                             } finally {
@@ -2659,12 +2566,7 @@ public abstract class TreeSitterAnalyzer
                 .collect(Collectors.toSet());
 
         // Snapshot known files (those we've analyzed/cached)
-        Set<ProjectFile> knownFiles = withReadLock(() -> {
-            var s = new HashSet<ProjectFile>();
-            s.addAll(topLevelDeclarations.keySet());
-            s.addAll(parsedTreeCache.keySet());
-            return s;
-        });
+        Set<ProjectFile> knownFiles = withReadLock(() -> new HashSet<>(parsedTreeCache.keySet()));
 
         Set<ProjectFile> changed = new HashSet<>();
         var nowInstant = Instant.now();
@@ -2743,132 +2645,42 @@ public abstract class TreeSitterAnalyzer
                 && analysisResult.codeUnitState().isEmpty()) {
             return;
         }
-
-        topLevelDeclarations.put(pf, analysisResult.topLevelCUs());
-
         // Merge codeUnitsBySymbol with no-op checks to avoid allocations
-        analysisResult.codeUnitsBySymbol().forEach((symbol, cus) -> {
-            symbolIndex.compute(symbol, (String s, @Nullable List<CodeUnit> existing) -> {
-                if (existing == null) {
-                    return List.copyOf(cus);
-                }
-                if (cus.isEmpty()) {
-                    return existing; // nothing to add
-                }
-                boolean changed = false;
-                for (CodeUnit cu : cus) {
-                    if (!existing.contains(cu)) {
-                        changed = true;
-                        break;
+        analysisResult
+                .codeUnitsBySymbol()
+                .forEach((symbol, cus) -> symbolIndex.compute(symbol, (String s, @Nullable List<CodeUnit> existing) -> {
+                    if (existing == null) {
+                        return List.copyOf(cus);
                     }
-                }
-                if (!changed) {
-                    return existing;
-                }
-                var merged = new ArrayList<CodeUnit>(existing.size() + cus.size());
-                merged.addAll(existing);
-                for (CodeUnit cu : cus) {
-                    if (!merged.contains(cu)) {
-                        merged.add(cu);
+                    if (cus.isEmpty()) {
+                        return existing; // nothing to add
                     }
-                }
-                return List.copyOf(merged);
-            });
-        });
+                    boolean changed = false;
+                    for (CodeUnit cu : cus) {
+                        if (!existing.contains(cu)) {
+                            changed = true;
+                            break;
+                        }
+                    }
+                    if (!changed) {
+                        return existing;
+                    }
+                    var merged = new ArrayList<CodeUnit>(existing.size() + cus.size());
+                    merged.addAll(existing);
+                    for (CodeUnit cu : cus) {
+                        if (!merged.contains(cu)) {
+                            merged.add(cu);
+                        }
+                    }
+                    return List.copyOf(merged);
+                }));
 
-        // Merge legacy maps and new combined state from analysisResult.codeUnitState()
+        // Merge combined state from analysisResult.codeUnitState()
         analysisResult.codeUnitState().forEach((cu, newState) -> {
-            // children
-            childrenByParent.compute(cu, (CodeUnit p, @Nullable List<CodeUnit> existing) -> {
-                var newKids = newState.children();
-                if (existing == null) {
-                    return newKids;
-                }
-                if (newKids.isEmpty()) {
-                    return existing;
-                }
-                boolean changed = false;
-                for (CodeUnit kid : newKids) {
-                    if (!existing.contains(kid)) {
-                        changed = true;
-                        break;
-                    }
-                }
-                if (!changed) {
-                    return existing;
-                }
-                var merged = new ArrayList<CodeUnit>(existing.size() + newKids.size());
-                merged.addAll(existing);
-                for (CodeUnit kid : newKids) {
-                    if (!merged.contains(kid)) {
-                        merged.add(kid);
-                    }
-                }
-                return List.copyOf(merged);
-            });
-
-            // signatures
-            signatures.compute(cu, (CodeUnit c, @Nullable List<String> existing) -> {
-                var newSigs = newState.signatures();
-                if (existing == null) {
-                    return List.copyOf(newSigs);
-                }
-                if (newSigs.isEmpty()) {
-                    return existing;
-                }
-                boolean changed = false;
-                for (String s : newSigs) {
-                    if (!existing.contains(s)) {
-                        changed = true;
-                        break;
-                    }
-                }
-                if (!changed) {
-                    return existing;
-                }
-                var merged = new ArrayList<String>(existing.size() + newSigs.size());
-                merged.addAll(existing);
-                for (String s : newSigs) {
-                    if (!merged.contains(s)) {
-                        merged.add(s);
-                    }
-                }
-                return List.copyOf(merged);
-            });
-
-            // ranges
-            sourceRanges.compute(cu, (CodeUnit c, @Nullable List<Range> existing) -> {
-                var newRngs = newState.ranges();
-                if (existing == null) {
-                    return List.copyOf(newRngs);
-                }
-                if (newRngs.isEmpty()) {
-                    return existing;
-                }
-                boolean changed = false;
-                for (Range r : newRngs) {
-                    if (!existing.contains(r)) {
-                        changed = true;
-                        break;
-                    }
-                }
-                if (!changed) {
-                    return existing;
-                }
-                var merged = new ArrayList<Range>(existing.size() + newRngs.size());
-                merged.addAll(existing);
-                for (Range r : newRngs) {
-                    if (!merged.contains(r)) {
-                        merged.add(r);
-                    }
-                }
-                return List.copyOf(merged);
-            });
-
             // combined state merge
-            codeUnitState.compute(cu, (CodeUnit k, @Nullable CodeUnitState existing) -> {
+            codeUnitState.compute(cu, (CodeUnit k, @Nullable CodeUnitProperties existing) -> {
                 if (existing == null) {
-                    return new CodeUnitState(newState.children(), newState.signatures(), newState.ranges());
+                    return new CodeUnitProperties(newState.children(), newState.signatures(), newState.ranges());
                 }
                 List<CodeUnit> mergedKids = existing.children();
                 var newKids = newState.children();
@@ -2909,24 +2721,20 @@ public abstract class TreeSitterAnalyzer
                     mergedRanges = List.copyOf(tmp);
                 }
 
-                return new CodeUnitState(mergedKids, mergedSigs, mergedRanges);
+                return new CodeUnitProperties(mergedKids, mergedSigs, mergedRanges);
             });
         });
 
         // Mirror per-file state
         fileState.put(
                 pf,
-                new FileState(
-                        analysisResult.topLevelCUs(),
-                        parsedTreeCache.get(pf),
-                        analysisResult.importStatements()));
+                new FileProperties(
+                        analysisResult.topLevelCUs(), parsedTreeCache.get(pf), analysisResult.importStatements()));
     }
 
     /* ---------- comment detection for source expansion ---------- */
 
-    /**
-     * Checks if a Tree-Sitter node represents a comment. Supports common comment node types across languages.
-     */
+    /** Checks if a Tree-Sitter node represents a comment. Supports common comment node types across languages. */
     protected boolean isCommentNode(TSNode node) {
         if (node.isNull()) {
             return false;
@@ -2939,9 +2747,7 @@ public abstract class TreeSitterAnalyzer
                 || nodeType.equals("documentation_comment");
     }
 
-    /**
-     * Returns true if the node is considered leading metadata (comments or attribute-like nodes).
-     */
+    /** Returns true if the node is considered leading metadata (comments or attribute-like nodes). */
     protected boolean isLeadingMetadataNode(TSNode node) {
         if (isCommentNode(node)) {
             return true;
@@ -2981,9 +2787,7 @@ public abstract class TreeSitterAnalyzer
         return comments;
     }
 
-    /**
-     * Checks if a node contains only whitespace (spaces, tabs, newlines).
-     */
+    /** Checks if a node contains only whitespace (spaces, tabs, newlines). */
     protected boolean isWhitespaceOnlyNode(TSNode node) {
         if (node.isNull()) {
             return false;
@@ -3028,7 +2832,7 @@ public abstract class TreeSitterAnalyzer
 
             // Reverse to get earliest-first
             Collections.reverse(leading);
-            int newStartByte = leading.get(0).getStartByte();
+            int newStartByte = leading.getFirst().getStartByte();
 
             Range expandedRange = new Range(
                     originalRange.startByte(),
